<resources>
    <string name="app_name">Score Record</string>

    <string name="add">Add</string>
    <string name="statistic">Statistic</string>
    <string name="delete_one">Delete One</string>
    <string name="Q1">Q1</string>
    <string name="Q2">Q2</string>
    <string name="Q3">Q3</string>
    <string name="Q4">Q4</string>
    <string name="Q5">Q5</string>


    <string name="Save">Save</string>
    <string name="ID">ID</string>
    <string name="high_score">Highest Score</string>
    <string name="low_score">Lowest Score</string>
    <string name="average_score">Average</string>
    <string name="delete">Delete</string>

    <string name="errorButton">OK</string>
    <string name="errorTitle">Error</string>
    <string name="errorMessage">Missing Info</string>
    <string name="empty_input">Empty Input</string>
    <string name="invalid_id">ID Length Must Be 4</string>
    <string name="invalid_score_q1">Q1 Input Must Be Within 0 to 100</string>
    <string name="invalid_score_q2">Q2 Input Must Be Within 0 to 100</string>
    <string name="invalid_score_q3">Q3 Input Must Be Within 0 to 100</string>
    <string name="invalid_score_q4">Q4 Input Must Be Within 0 to 100</string>
    <string name="invalid_score_q5">Q5 Input Must Be Within 0 to 100</string>
    <string name="student_id">Student ID</string>
    <string name="text_view_holder">Text View Holder</string>
    <string name="quiz">quiz</string>
    <string name="score">Score</string>

</resources>
