<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:stretchColumns="1">

    <TableRow
        android:id="@+id/table_row_high"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/score" />

        <TextView
            android:layout_width="0dp"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/Q1" />

        <TextView
            android:layout_width="0dp"
            android:layout_column="2"
            android:layout_weight="1"
            android:text="@string/Q2" />

        <TextView
            android:layout_width="0dp"
            android:layout_column="3"
            android:layout_weight="1"
            android:text="@string/Q3" />

        <TextView
            android:layout_width="0dp"
            android:layout_column="4"
            android:layout_weight="1"
            android:text="@string/Q4" />

        <TextView
            android:layout_width="0dp"
            android:layout_column="5"
            android:layout_weight="1"
            android:text="@string/Q5" />
    </TableRow>


    <TableRow
        android:id="@+id/table_row_high"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/high_LabelTextView"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/high_score" />

        <TextView
            android:id="@+id/tv_high_q1"
            android:layout_width="0dp"
            android:layout_column="1"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_high_q2"
            android:layout_width="0dp"
            android:layout_column="2"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_high_q3"
            android:layout_width="0dp"
            android:layout_column="3"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_high_q4"
            android:layout_width="0dp"
            android:layout_column="4"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_high_q5"
            android:layout_width="0dp"
            android:layout_column="5"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:id="@+id/table_row_low"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/low_LabelTextView"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/low_score" />

        <TextView
            android:id="@+id/tv_low_q1"
            android:layout_width="0dp"
            android:layout_column="1"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_low_q2"
            android:layout_width="0dp"
            android:layout_column="2"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_low_q3"
            android:layout_width="0dp"
            android:layout_column="3"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_low_q4"
            android:layout_width="0dp"
            android:layout_column="4"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_low_q5"
            android:layout_width="0dp"
            android:layout_column="5"
            android:layout_weight="1" />
    </TableRow>


    <TableRow
        android:id="@+id/table_row_average"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/avg_LabelTextView"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/average_score" />

        <TextView
            android:id="@+id/tv_average_q1"
            android:layout_width="0dp"
            android:layout_column="1"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_average_q2"
            android:layout_width="0dp"
            android:layout_column="2"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_average_q3"
            android:layout_width="0dp"
            android:layout_column="3"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_average_q4"
            android:layout_width="0dp"
            android:layout_column="4"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_average_q5"
            android:layout_width="0dp"
            android:layout_column="5"
            android:layout_weight="1" />
    </TableRow>


</TableLayout>
